--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
  <!-- ------------------------------ about ------------------------------ -->
   <section class="about" id="about">
     <div class="about-img">
-        <img src="imagens/perfil.jfif" height="500px">
+        <img src="perfil.jfif" height="500px">
     </div>
 
     <div class="about-content">
